# Poker

./: .gitignore  Pipfile  README.md  config.py  pyproject.toml  run.py
.github/workflows/: python-app.yml
app/: __init__.py  email.py  forms.py  models.py  poker.py  views.py
app/auth/: __init__.py  forms.py  views.py
app/main/: forms.py  views.py
app/static/: style.css
app/templates/: base.html  bet.html  index.html  play.html  register.html  signin.html  user.html
app/templates/auth/: register.html  reset_password.html  reset_password_request.html  signin.html
app/templates/email/: reset_password.html  reset_password.txt
app/templates/errors/: 500.html
app/tests/: conftest.py  test_models.py  test_poker.py
app/tests/functional/: test_main_views.py
app/tests/unit/: test_models.py
migrations/versions/: 5fe8508c3e63_.py  7e66df474655_added_fields_to_user_model.py  847f8a0e60fb_hand_table.py  dd66578efb26_add_bet_tally_to_user.py  fc83dad1ce55_users_table.py
